--- a/exercicio6/index.html
+++ b/exercicio6/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="PT - BR">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Exercicio 05</title>
+    <title>Exercicio 6</title>
 </head>
 <body>
-    <h1>Execicio 05</h1>
-    <input type="text" id="total"> <br>
-    <input type="text" id="pagas"><br>
-    <input type="text" id="valor">
+    <h1>Exercicio 06</h1>
+    <input type="text" id="nome"><br>
+    <input type="text" id="nota1"><br>
+    <input type="text" id="nota2"><br>
+    <input type="text" id="nota3"><br>
     <h3 id="texto"></h3>
     <h3 id="texto2"></h3>
-    <button onclick= "Calcular()"> Calcular</button>
+    <button onclick="Calcular()">Calcular</button>
     <script src="main.js"></script>
 </body>
 </html>
