--- a/exercicio10/index.html
+++ b/exercicio10/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt - br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Exercicio 10</h1>
-    <input type="text" id="valorpret" placeholder="Valor da Prestação"><br>
-    <input type="text" id="taxa" placeholder="Taxa de juros"><br>
+    <input type="text" id="valorp" placeholder="Valor da Prestação"><br>
+    <input type="text" id="taxas" placeholder="Taxa de juros"><br>
     <input type="text" id="dias" placeholder="Dias em Atraso">
     <h3 id="Resultado"></h3>
+    <h3 id="Resultado2"></h3>
     <button onclick="Calcular()">Calcular</button>
+    <script src="main.js"></script>
 </body>
 </html>
