--- a/exercicio7/index.html
+++ b/exercicio7/index.html
@@ -7,6 +7,10 @@
     <title>Exercicio 07</title>
 </head>
 <body>
+    <h1>Exercicio 07</h1>
+    <input type="text" id="valorcarro" placeholder="Valor do Carro">
+    <h3 id="resultado"></h3>
+    <button onclick="calcular()">Calcular</button>
     <script src="main.js"></script>
 </body>
 </html>
