--- a/exercicio1/index.html
+++ b/exercicio1/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Exercicio 01</h1>
-    <input type="text" id="numero1"> <br>
-    <input type="text" id="numero2"> <br>
-    <input type="text" id="numero3"><br>
+    <input type="text" id="numero1" placeholder="1° numero"> <br>
+    <input type="text" id="numero2" placeholder="2° numero"> <br>
+    <input type="text" id="numero3" placeholder="3° numero"> <br>
     <h3 id="resultado"></h3>
     <button onclick="Calcular()">Calcular</button>
     <script src="main.js"></script>
