--- a/exercicio3/index.html
+++ b/exercicio3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exercicio 03</h1>
-    <input type="text" id="numero"> <br> 
+    <input type="text" id="numero" placeholder="Numero"> <br> 
     <h3 id= "Resultado"></h3><br>
     <button onclick="Calcular()">Calcular</button>
     <script src="main.js"></script>
