--- a/exercicio4/index.html
+++ b/exercicio4/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Execicio 04</h1>
-    <input type="text" id="numero">
+    <input type="text" id="numero" placeholder="Saldo Atual">
     <h3 id="novo"></h3>
     <button onclick= "Calcular()"> Calcular</button>
     <script src="main.js"></script>
