--- a/exercicio5/index.html
+++ b/exercicio5/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Execicio 05</h1>
-    <input type="text" id="total"> <br>
-    <input type="text" id="pagas"><br>
-    <input type="text" id="valor">
+    <input type="text" id="total" placeholder="Total de parcelas"> <br>
+    <input type="text" id="pagas" placeholder="Parcelas Pagas"><br>
+    <input type="text" id="valor" placeholder="Valor da parcela">
     <h3 id="texto"></h3>
     <h3 id="texto2"></h3>
     <button onclick= "Calcular()"> Calcular</button>
