--- a/exercicio6/index.html
+++ b/exercicio6/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Exercicio 06</h1>
-    <input type="text" id="nome"><br>
-    <input type="text" id="nota1"><br>
-    <input type="text" id="nota2"><br>
-    <input type="text" id="nota3"><br>
+    <input type="text" id="nome" placeholder="Nome do Aluno"><br>
+    <input type="text" id="nota1" placeholder="Nota 1"><br>
+    <input type="text" id="nota2" placeholder="Nota 2"><br>
+    <input type="text" id="nota3" placeholder="Nota 3"><br>
     <h3 id="texto"></h3>
     <h3 id="texto2"></h3>
     <button onclick="Calcular()">Calcular</button>
