--- a/exercicio7/index.html
+++ b/exercicio7/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Exercicio 07</h1>
     <input type="text" id="valorcarro" placeholder="Valor do Carro">
-    <h3 id="resultado"></h3>
-    <button onclick="calcular()">Calcular</button>
+    <h3 id="igual"></h3>
+    <button onclick="Calcular()">Calcular</button>
     <script src="main.js"></script>
 </body>
 </html>
