--- a/exercicio10/index.html
+++ b/exercicio10/index.html
@@ -11,8 +11,8 @@
     <input type="text" id="valorp" placeholder="Valor da Prestação"><br>
     <input type="text" id="taxas" placeholder="Taxa de juros"><br>
     <input type="text" id="dias" placeholder="Dias em Atraso">
-    <h3 id="Resultado"></h3>
-    <h3 id="Resultado2"></h3>
+    <h3 id="resultado"></h3>
+    <h3 id="resultado2"></h3>
     <button onclick="Calcular()">Calcular</button>
     <script src="main.js"></script>
 </body>
