--- a/exercicio2/index.html
+++ b/exercicio2/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Exercicio 02</h1>
-    <input type="text" id="numero1"> <br>
-    <input type="text" id="numero2"> <br>
+    <input type="text" id="numero1" placeholder="1° numero"> <br>
+    <input type="text" id="numero2" placeholder="2° numero"> <br>
     <h3 id="soma"></h3>
     <h3 id="subtracao"></h3>
     <h3 id="divisao"></h3>
